--- a/environment.yml
+++ b/environment.yml
@@ -244,3 +244,4 @@ dependencies:
   - zipp=3.8.0=pyhd8ed1ab_0
   - zlib=1.2.12=h8cc25b3_1
   - zstd=1.5.0=h6255e5f_0
+prefix: C:\Users\jroborel\Anaconda3\envs\st_apps
